fix yardstick proj title spacing

--- a/styles.css
+++ b/styles.css
@@ -378,6 +378,7 @@ hr {
         position: absolute;
         /* top: 30vh; */
         bottom: 20px;
+        left: 20px;
         /* position: relative;
         bottom: 50px; */
     }
